Started to implement finding airline

--- a/src/web/index.html
+++ b/src/web/index.html
@@ -1,5 +1,7 @@
 <html>
 	<link rel="stylesheet" href="web/index.css">
+	<!-- <link rel="stylesheet" href="index.css"> -->
+
 	<body>
 	<header id = "pageTitle">
 		Airline Search Engine
@@ -7,7 +9,7 @@
 	<div id = "pageContent">
 		<div id = "dropdownDiv">
 			<select name="Operation" id="dropdownMenu">
-				<option value="0">Find list of airports operating in the Country X</option>
+				<option value="0">Find Airline</option>
 				<option value="1">Find the list of Airlines having X stops</option>
 				<option value="2">List of airlines operating with code share</option>
 				<option value="3">Find the list of active airlines in a country</option>
@@ -16,7 +18,9 @@
 		<div id = "inputDiv">
 
 		</div>
-		<button id="submitButton">Submit</button>
+		<div id = "submitButtonHolder">
+			<button id="submitButton">Submit</button>
+		</div>
 
 		<div id = "displayDiv"> 
 
@@ -24,5 +28,7 @@
 	</div>
 	</body>
 	<script src="web/index.js"></script>
+
+	<!-- <script src="index.js"></script> -->
 
 </html>
