--- a/src/web/index.html
+++ b/src/web/index.html
@@ -10,8 +10,8 @@
 		<div id = "dropdownDiv">
 			<select name="Operation" id="dropdownMenu">
 				<option value="0">Find Airline</option>
-				<option value="1">Find the list of Airlines having X stops</option>
-				<option value="2">List of airlines operating with code share</option>
+				<option value="1">Find Airport</option>
+				<option value="2">Find Route</option>
 				<option value="3">Find the list of active airlines in a country</option>
 			  </select>
 		</div>
@@ -28,7 +28,6 @@
 	</div>
 	</body>
 	<script src="web/index.js"></script>
-
 	<!-- <script src="index.js"></script> -->
 
 </html>
