--- a/src/web/index.html
+++ b/src/web/index.html
@@ -11,6 +11,7 @@
 			<select name="Operation" id="dropdownMenu">
 				<option value="0">Find Airline</option>
 				<option value="1">Find Airport</option>
+				<option value="2">Find all cities within D Hops</option>
 				<!-- <option value="2">Find Route</option> -->
 				<option value="3">Find the list of active airlines in a country</option>
 			  </select>
