--- a/src/web/index.html
+++ b/src/web/index.html
@@ -7,21 +7,24 @@
 		Airline Search Engine
 	</header>
 	<div id = "pageContent">
-		<div id = "dropdownDiv">
-			<select name="Operation" id="dropdownMenu">
-				<option value="0">Find Airline</option>
-				<option value="1">Find Airport</option>
-				<option value="2">Find all cities within D Hops</option>
-				<!-- <option value="2">Find Route</option> -->
-				<option value="3">Find the list of active airlines in a country</option>
-			  </select>
+		<div id = "selectionHolder">
+			<div id = "dropdownDiv">
+				<select name="Operation" id="dropdownMenu">
+					<option value="0">Find Airline</option>
+					<option value="1">Find Airport</option>
+					<option value="2">Find all cities within D Hops</option>
+					<!-- <option value="2">Find Route</option> -->
+					<option value="3">Find the list of active airlines in a country</option>
+				  </select>
+			</div>
+			<div id = "submitButtonHolder">
+				<button id="submitButton">Submit</button>
+			</div>
 		</div>
 		<div id = "inputDiv">
 
 		</div>
-		<div id = "submitButtonHolder">
-			<button id="submitButton">Submit</button>
-		</div>
+
 
 		<div id = "displayDiv"> 
 
