--- a/src/web/index.html
+++ b/src/web/index.html
@@ -1,5 +1,5 @@
 <html>
-	<link rel="stylesheet" href="web/index.css">
+	<link rel="stylesheet" href="src/web/index.css">
 	<!-- <link rel="stylesheet" href="index.css"> -->
 
 	<body>
@@ -13,7 +13,7 @@
 					<option value="0">Find Airline</option>
 					<option value="1">Find Airport</option>
 					<option value="2">Find all cities within D Hops</option>
-					<option value="3">Find the list of active airlines in a country</option>
+					<option value="3">Find a trip between two cities</option>
 				  </select>
 			</div>
 			<div id = "submitButtonHolder">
@@ -30,7 +30,7 @@
 		</div>
 	</div>
 	</body>
-	<script src="web/index.js"></script>
+	<script src="src/web/index.js"></script>
 	<!-- <script src="index.js"></script> -->
 
 </html>
