--- a/src/web/index.html
+++ b/src/web/index.html
@@ -1,6 +1,7 @@
 <html>
-	<link rel="stylesheet" href="src/web/index.css">
+	<!-- <link rel="stylesheet" href="src/web/index.css"> -->
 	<!-- <link rel="stylesheet" href="index.css"> -->
+	<link rel="stylesheet" href="web/index.css">
 
 	<body>
 	<header id = "pageTitle">
@@ -30,7 +31,8 @@
 		</div>
 	</div>
 	</body>
-	<script src="src/web/index.js"></script>
+	<script src="web/index.js"></script>
+	<!-- <script src="src/web/index.js"></script> -->
 	<!-- <script src="index.js"></script> -->
 
 </html>
